# core

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  DEVPLAN.md  Dockerfile  KEYS.md  MEMCUBE_RFC.md  Procfile  README.md  RUNBOOK.md  SELF_HOST.md  SELF_HOSTING.md  docker-compose.yml  nixpacks.toml  railway.json  railway.staging.json  railway.staging.toml  requirements.txt  round7_corpus.jsonl  vercel.json
.next/: trace  trace-build
api/: calibration_engine.py  decision_severity.py  detection.py  fleet.py  helpers.py  invariants.py  main.py  parallel_exec.py  redis_snapshot.py  redis_state.py  self_authored.py  tenant.py  vaccination.py  webhooks.py
dashboard/: next.config.ts  package-lock.json
docs/: API_REFERENCE.md  LATENCY_WHITEPAPER.md  LINEAGE_EXPORT.md  RAG_GUARD.md  UNIVERSAL_ADAPTER.md  github-action.md  grafana_dashboard.json  investor_pitch_en.md  postman_collection.json  round12_corpus_spec.md  round12_phase5b_diagnosis.md  sgraal-format.md  sgraal.postman_collection.json  sgraal.postman_environment.json
examples/: 01_basic_preflight.py  02_rag_guardrail.py  03_multi_agent_chain.py  04_compound_attack_detection.py  README.md  basic_usage.py
mcp/: README.md  package-lock.json  package.json
plugins/: __init__.py  base.py  loader.py  registry.py
research/: THE_RISK_POLYTOPE.md  endpoint_inventory.md  r12_confidence_interval.md  r12_mismatch_diagnosis_2026_04_25.md  r12_pa_threshold_analysis.md  r12_theoretical_ceiling.md
scoring_engine/: __init__.py  arrhenius.py  banach.py  bocpd.py  calibration.py  causal_graph.py  client_optimizer.py  cohomological_gradient.py  compliance_engine.py  consolidation.py  constants.py  copula.py  cox_hazard.py  ctl_verification.py  cvar.py  dependency_graph.py  differential_privacy.py  dirichlet_process.py  drift_detector.py  dual_process_auq.py  ergodicity.py  expected_utility.py  extended_freshness.py  fallback_engine.py  fisher_rao.py  formal_verification.py  frechet.py  free_energy.py  frontdoor.py  geodesic_flow.py  grokguard.py  gumbel_softmax.py  hawkes_process.py  healing_policy.yaml  healing_policy_matrix.py  hmm.py  homology_torsion.py  hotelling_t2.py  importance_detector.py  info_thermodynamics.py  (+46 more)
scripts/: _harvest_feature_matrix.py  analyze_churn_risk.py  analyze_detection_ordering.py  analyze_s_relevance_impact.py  b3_healing_efficacy.py  b4_qtable_analysis.py  bench_hmm_optimization.py  business_metrics_a.py  business_metrics_b.py  check_tenant_isolation.py  compute_kappa_mem.py  create_api_keys_table.sql  create_audit_log_table.sql  create_memory_store_table.sql  (+49 more)
sdk/cloudflare-sgraal/: README.md  pyproject.toml
sdk/cloudflare-sgraal/cloudflare_sgraal/: __init__.py  bridge.py
sdk/mem0_bridge/: __init__.py  pyproject.toml  safe_memory.py
sdk/python/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
sdk/python/sgraal/: __init__.py  autogen_middleware.py  cli.py  client.py  crewai_guard.py  diagnose.py  edge.py  guard.py  haystack_node.py  integrations.py  langchain_rag_guard.py  llamaindex_rag_guard.py  llamaindex_wrapper.py  omega_identity.py  openai_hook.py  plugin_interface.py  rag_filter.py  semantic_kernel_filter.py  tracker.py  universal_adapter.py
sdk/python/sgraal/sentinel/: pinecone_wrapper.py
sdk/python/sgraal/synapse/: auto_crud.py
sdk/python/tests/: test_edge.py
sdk/rust/sgraal-rust/: Cargo.toml  README.md
sdk/rust/sgraal-rust/src/: lib.rs  types.rs
sgraal-python-sdk/: LICENSE  README.md  pyproject.toml  setup.cfg
sgraal-python-sdk/examples/: basic_preflight.py  hallucination_detection.py  langchain_integration.py
sgraal-python-sdk/sgraal/: __init__.py  client.py  models.py
sgraal-python-sdk/sgraal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+556 files in other folders)
