[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgraal"
version = "0.1.0"
description = "Memory governance SDK for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Zs-Consulting Kft."}]
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://sgraal.com"
Repository = "https://github.com/sgraal-ai/core"
Documentation = "https://api.sgraal.com/docs"
