[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgraal"
version = "0.1.0"
description = "Python SDK for the Sgraal memory governance protocol"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Sgraal", email = "hello@sgraal.com" }]
keywords = ["sgraal", "ai", "memory", "governance", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://sgraal.com"
Repository = "https://github.com/sgraal-ai/core"
Documentation = "https://sgraal.com"

[tool.setuptools.packages.find]
include = ["sgraal*"]
